# GPU-accelerated-NTF-SART

./: .gitignore  CMakeLists.txt  README.md
data/: cam_params.json  param1.txt
data/lightfield1/: LF0_Cam000_depth_frame000.exr  LF0_Cam012_depth_frame000.exr  gt_depth_lowres_Cam000.pfm  gt_depth_lowres_Cam024.pfm  gt_disp_highres_Cam000.pfm  gt_disp_lowres_Cam012.pfm  parameters.cfg
kernels/: main.cu  main.cuh
src/: main.cpp  myFocalStack.cpp  myFocalStack.h  myLayerOptimize.cpp  myLayerOptimize.h  myLayerOptimizeWithFocalStack.cpp  myLayerOptimizeWithFocalStack.h  myLayerStack.cpp  myLayerStack.h  myLightField.cpp  myLightField.h  myPSNRcalculator.h  myTransformCoordinate.cpp  myTransformCoordinate.h
